# AI-Contributor-for-Open-Source-Go-Projects

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt
config/: default.yaml  validator.yaml
docs/: architecture.md  eval-report.md  stage-0.md  stage-1.md  stage-2.md  stage-3.md  stage-4.md  stage-5.md  stage-6.md  understanding-ground-truth.md
eval/: diagnose_coverage.py  goldgate.py  harvest_repo.py  make_instance.py  metrics.py  open_pr.py  repos.py  run_eval.py
eval/results/: baseline.json  gate2.json  gate4.json
eval/results/agent/: cobra-1093.repro_test.go  cobra-1093.trace.json  cobra-1651.attempt.patch  cobra-1651.repro_test.go  (+40 more)
eval/tasks/: validator-1284.fix.patch  validator-1284.json  validator-1284.test.patch  validator-1314.repro_test.go  validator-1423.fix.patch  validator-1423.json  validator-1423.test.patch  validator-1444.fix.patch  validator-1444.json  validator-1444.test.patch  validator-1476.fix.patch  validator-1476.json  validator-1476.test.patch
prompts/: context.md  fix.md  pr.md  rank.md  repro.md
scripts/: audit_gt.sh  build_gt.sh  build_ptp.sh  check_env.sh  gate3.sh  gate4.sh  migrate_tasks.sh  probe_ptp.py  pull_models.sh  reproduce.sh  setup.sh  stage0_smoke.py  stage3_smoke.py  verify_gt.sh
src/go_issue_agent/: agent.py  caching.py  cli.py  config.py  edits.py  models.py  tracing.py
tests/: test_agent.py  test_evidence.py  test_goldgate.py  test_harvest.py  test_metrics.py  test_open_pr.py  test_reliability.py  test_repair_rank.py  test_robustness.py  test_tools.py
(+67 files in other folders)
